Collections#new: Corrected the spacingbetween input felds, added a placeholder for neihboorhood, changed the margin of the button

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -20,3 +20,7 @@
     text-align: center;
   }
 }
+
+.algolia-places {
+  display: block !important;
+}
